CHANGELOG for ASU Brand module for Drupal 7

7.x-1.17 2017-08-07
-------------------
- Set brand header default version to 'stable', and also set header selection to 'stable' upon update

7.x-1.16 2017-05-23
-------------------
- Added 'asu_brand_do_not_override' variable. This is a JSON-encoded array of host names. If the requested host is found
  in the list, the brand module will not pass in the CAS authentication URL if the CAS module is enabled.
- Removed max version check

7.x-1.15 2017-03-22
-------------------
-Now updates theme_default value regardless of whether the module is part of Webspark or not.

7.x-1.14 2017-01-19
-----------------------
- Added check to disable GTM script during testing to keep faulty stats out of GTM records and to fix testing issues
  introduced by GTM-injected content.

7.x-1.13 2016-08-11
-----------------------
- Re-added max header version check

7.x-1.9, 2015-05-06
-----------------------
- Updated default header version constant to 4.3

7.x-1.7, 2014-11-25
-----------------------
- Google Tag Manager (GTM) Integration for analytics injection (reads new gtm.shtml
  file from includes folder).
- Header versions file changed to gtmheader.xml .
- Header versions file location is sensitive to set basepath.
- Checks for brand module version dependancy.
- Menu item json injects absolute paths.
- Removed extraneous properties from menu menu item json.

7.x-1.6, 2014-09-22
-----------------------
- Removes use cas_login_destination() as it is not available as of cas-7.x-1.4.

7.x-1.5, 2014-01-15
-----------------------
- Add the use of long term caches in the case that the external file resources
  are unavailable, including header version XML file.
- Added the ability to block certain paths from getting block's full content and
  just providing a 'Preview not available' message. This helps with panel pane
  previews throwing ajax errors. Provides default paths with option to add/delete
  paths through the UI.

7.x-1.4, 2013-03-27