@@ -1,5 +1,9 @@
 CHANGELOG for ASU Brand module for Drupal 7
 
+7.x-1.18 2017-11-09
+-------------------
+- Fixed the 'do not override' list to use js instead of relying on the hosts header
+
 7.x-1.17 2017-08-07
 -------------------
 - Set brand header default version to 'stable', and also set header selection to 'stable' upon update
